Cycles hair shader reflects incorrectly for meshes #45058

Closed
opened 2015-06-13 09:07:03 +02:00 by Kevin Hays · 17 comments

System Information
OS: Windows 7 64 bit
Graphics Card: nvidia geforce 560ti

Blender Version
Broken: 2.75 Release candidate bff8b5d

Short description of error
Adding a hair shader to a plane makes the reflections look triangulated.

Exact steps for others to reproduce the error
Add a sun lamp and plane, then give the plane a hair shader with the default settings. I noticed if you triangulate the plane, separate one of the faces, and move the the vertices counter-clockwise, the reflections look correct.
HairShaderBug.blend

**System Information** OS: Windows 7 64 bit Graphics Card: nvidia geforce 560ti **Blender Version** Broken: 2.75 Release candidate bff8b5d **Short description of error** Adding a hair shader to a plane makes the reflections look triangulated. **Exact steps for others to reproduce the error** Add a sun lamp and plane, then give the plane a hair shader with the default settings. I noticed if you triangulate the plane, separate one of the faces, and move the the vertices counter-clockwise, the reflections look correct. [HairShaderBug.blend](https://archive.blender.org/developer/F190702/HairShaderBug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @KevinHays

Added subscriber: @KevinHays

Added subscriber: @mont29

Added subscriber: @mont29

Looks like there is something going wrong with winding here indeed…

Looks like there is something going wrong with winding here indeed…
Sergey Sharybin was assigned by Bastien Montagne 2015-06-13 10:13:31 +02:00

Added subscribers: @ThomasDinges, @MartijnBerger

Added subscribers: @ThomasDinges, @MartijnBerger

Serious question. Why would you use a "Hair" shader on regular geometry?
I am not sure we have a bug here.

Serious question. Why would you use a "Hair" shader on regular geometry? I am not sure we have a bug here.
Author

In #45058#315569, @ThomasDinges wrote:
Serious question. Why would you use a "Hair" shader on regular geometry?
I am not sure we have a bug here.

I'm trying to make a detailed feather and I'm using a plane to approximate the barbule strands between the barb strands
http://www.peteducation.com/images/articles/ill_feather_barb.gif
featherCycles.png

> In #45058#315569, @ThomasDinges wrote: > Serious question. Why would you use a "Hair" shader on regular geometry? > I am not sure we have a bug here. I'm trying to make a detailed feather and I'm using a plane to approximate the barbule strands between the barb strands http://www.peteducation.com/images/articles/ill_feather_barb.gif ![featherCycles.png](https://archive.blender.org/developer/F191661/featherCycles.png)

Added subscriber: @brecht

Added subscriber: @brecht

I guess the problem is that tangent used by the hair shader is not smooth for triangles? Curves have a smooth default tangent, but triangles do not, for that you would need to use a Tangent node with a UV map. But the Hair BSDF does not have a tangent input, so that's not possible right now.

I guess the solution would be to add a tangent input for the Hair BSDF, or to make the Hair BSDF use the default UV map to create a tangent for triangles, or to just consider this not supported.

I guess the problem is that tangent used by the hair shader is not smooth for triangles? Curves have a smooth default tangent, but triangles do not, for that you would need to use a Tangent node with a UV map. But the Hair BSDF does not have a tangent input, so that's not possible right now. I guess the solution would be to add a tangent input for the Hair BSDF, or to make the Hair BSDF use the default UV map to create a tangent for triangles, or to just consider this not supported.

@brecht, that's exactly it. Think supporting such configurations will be nice to have and started working on it, but then got bounced to other work. Well, more code next week :)

@brecht, that's exactly it. Think supporting such configurations will be nice to have and started working on it, but then got bounced to other work. Well, more code next week :)
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

This sounds like a todo?

This sounds like a todo?

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

It is more a TODO yes. I've got patch for this tho (D1428), but it needs some additional review (especially from artists) before we can merge it.

@KevinHays, so thanks for the report, but archiving it now and suggesting you to test D1428.

It is more a TODO yes. I've got patch for this tho ([D1428](https://archive.blender.org/developer/D1428)), but it needs some additional review (especially from artists) before we can merge it. @KevinHays, so thanks for the report, but archiving it now and suggesting you to test [D1428](https://archive.blender.org/developer/D1428).

This issue was referenced by 3f4c0612fe

This issue was referenced by 3f4c0612fedf9d135d72c428e2433c890edb0412

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'

This issue was referenced by blender/cycles@ddcd92fd73

This issue was referenced by blender/cycles@ddcd92fd7305053ccdf79af8e04511952bce1466
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45058
No description provided.